# docs/swagger.json
@@ -12,6 +12,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "todos"
+                ],
                 "summary": "Create a new todo item.",
                 "parameters": [
                     {
@@ -20,7 +23,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Todo"
+                            "$ref": "#/definitions/domain.TodoRequest"
                         }
                     }
                 ],
@@ -54,7 +57,7 @@
                 "completed": {
                     "type": "boolean"
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "id": {
@@ -63,7 +66,18 @@
                 "title": {
                     "type": "string"
                 },
-                "updatedAt": {
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.TodoRequest": {
+            "type": "object",
+            "properties": {
+                "completed": {
+                    "type": "boolean"
+                },
+                "title": {
                     "type": "string"
                 }
             }
